# agh_car_rental

./: CMakeLists.txt  REQUIREMENTS.md
inc/: auth.h  auth.hpp  car.h  car.hpp  client.h  client.hpp  conf.h  defaultCarsConf.h  main.hpp  menu.h  menu.hpp  messages.h  strings.h  utils.h  utils.hpp
res/: cars.yml  client.yml
res/clients/: abc.yml
res_example/: cars.yml
res_example/clients/: a.yml
src/: auth.cpp  car.cpp  client.cpp  main.cpp  menu.cpp  messages.cpp  utils.cpp
test/: agh_car_rental
test/res/: cars.yml  clientsa.yml
